--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +133,8 @@
     "    model = tf.keras.Sequential()\n",
     "    model.add(layers.Conv2D(16, (1, 2), strides=(1, 2), activation=\"linear\",\n",
     "                            input_shape=(blockSize, 2, 1)))\n",
-    "    model.add(layers.Conv2D(32, (1, 16), activation=\"linear\", padding='same'))\n",
-    "    model.add(layers.Conv2D(16, (1, 32), activation=\"linear\", padding='same'))\n",
+    "    model.add(layers.Conv2D(32, (1, 16), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.Conv2D(16, (1, 32), activation=\"relu\", padding='same'))\n",
     "    model.add(layers.Reshape((blockSize, 16, 1)))\n",
     "    model.add(layers.AveragePooling2D((1, 8)))\n",
     "    model.add(layers.Dense(1))\n",
@@ -161,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([[0.00025338]], shape=(1, 1), dtype=float32)\n"
+      "tf.Tensor([[0.00028672]], shape=(1, 1), dtype=float32)\n"
      ]
     }
    ],
@@ -180,32 +180,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_16\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_12 (Conv2D)           (None, 50, 2, 64)         192       \n",
+      "conv2d_34 (Conv2D)           (None, 50, 2, 64)         192       \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_6 (LeakyReLU)    (None, 50, 2, 64)         0         \n",
+      "leaky_re_lu_25 (LeakyReLU)   (None, 50, 2, 64)         0         \n",
       "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 50, 2, 64)         0         \n",
+      "dropout_22 (Dropout)         (None, 50, 2, 64)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_13 (Conv2D)           (None, 25, 1, 128)        204928    \n",
+      "conv2d_35 (Conv2D)           (None, 25, 1, 128)        204928    \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_7 (LeakyReLU)    (None, 25, 1, 128)        0         \n",
+      "leaky_re_lu_26 (LeakyReLU)   (None, 25, 1, 128)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_7 (Dropout)          (None, 25, 1, 128)        0         \n",
+      "dropout_23 (Dropout)         (None, 25, 1, 128)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 3200)              0         \n",
+      "flatten_11 (Flatten)         (None, 3200)              0         \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 1)                 3201      \n",
+      "dense_16 (Dense)             (None, 1)                 3201      \n",
       "=================================================================\n",
       "Total params: 208,321\n",
       "Trainable params: 208,321\n",
