--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'signal': [0.2122480720281601, 0.919700026512146]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import imageio\n",
@@ -323,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,14 +327,50 @@
     "    model.add(layers.MaxPooling2D(1,1))\n",
     "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
-    "    model.add(layers.Dense(64, activation='relu'))\n",
     "    model.add(layers.Dense(20))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_52\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_114 (Conv2D)          (None, 1, 50, 16)         80        \n",
+      "_________________________________________________________________\n",
+      "conv2d_115 (Conv2D)          (None, 1, 50, 32)         4640      \n",
+      "_________________________________________________________________\n",
+      "conv2d_116 (Conv2D)          (None, 1, 50, 64)         18496     \n",
+      "_________________________________________________________________\n",
+      "reshape_6 (Reshape)          (None, 50, 64, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_99 (MaxPooling (None, 50, 1, 1)          0         \n",
+      "_________________________________________________________________\n",
+      "dense_53 (Dense)             (None, 50, 1, 20)         40        \n",
+      "=================================================================\n",
+      "Total params: 23,256\n",
+      "Trainable params: 23,256\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = classification()\n",
+    "test.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
