--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -315,78 +315,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clssification():\n",
-    "    model = models.Sequential()\n",
-    "    model.add(layers.Conv2D(16, (1, 1), activation='relu', input_shape=(1, 50, 2)))\n",
+    "from tensorflow import keras\n",
+    "def cnn_classifier(blockSize):\n",
+    "    model = keras.Sequential()\n",
+    "    model.add(layers.Conv2D(16, (1, 1), activation='relu', input_shape=(1, blockSize, 2)))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
     "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
     "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
+    "    model.add(layers.Dense(64, activation='relu'))\n",
     "    model.add(layers.Dense(20))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_52\"\n",
+      "Model: \"sequential_61\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_114 (Conv2D)          (None, 1, 50, 16)         80        \n",
+      "conv2d_141 (Conv2D)          (None, 1, 50, 16)         48        \n",
       "_________________________________________________________________\n",
-      "conv2d_115 (Conv2D)          (None, 1, 50, 32)         4640      \n",
+      "max_pooling2d_110 (MaxPoolin (None, 1, 50, 16)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_116 (Conv2D)          (None, 1, 50, 64)         18496     \n",
+      "conv2d_142 (Conv2D)          (None, 1, 50, 32)         4640      \n",
       "_________________________________________________________________\n",
-      "reshape_6 (Reshape)          (None, 50, 64, 1)         0         \n",
+      "max_pooling2d_111 (MaxPoolin (None, 1, 50, 32)         0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_99 (MaxPooling (None, 50, 1, 1)          0         \n",
+      "conv2d_143 (Conv2D)          (None, 1, 50, 64)         18496     \n",
       "_________________________________________________________________\n",
-      "dense_53 (Dense)             (None, 50, 1, 20)         40        \n",
+      "max_pooling2d_112 (MaxPoolin (None, 1, 50, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "dense_62 (Dense)             (None, 1, 50, 64)         4160      \n",
+      "_________________________________________________________________\n",
+      "dense_63 (Dense)             (None, 1, 50, 20)         1300      \n",
       "=================================================================\n",
-      "Total params: 23,256\n",
-      "Trainable params: 23,256\n",
+      "Total params: 28,644\n",
+      "Trainable params: 28,644\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "test = classification()\n",
+    "test = cnn_classifier(50)\n",
     "test.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_and_compile_model():\n",
-    "    model = models.Sequential([\n",
-    "        layers.Dense(128, activation='relu', input_shape=(1,50,2)),\n",
-    "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(20)\n",
-    "    ])\n",
-    "    model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "                  optimizer=tf.keras.optimizers.Adam(0.01),\n",
-    "                  metrics=['accuracy'])\n",
+    "def cnn_classifier(blocksize):\n",
+    "    model = keras.Sequential()\n",
+    "    model.add(layers.Conv2D(16, (1, 2), padding='same', activation='relu', input_shape=(1, blocksize, 2)))\n",
+    "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.Reshape((1,blocksize, 64)))\n",
+    "    model.add(layers.Dense(64, activation='relu'))\n",
+    "    model.add(layers.Dense(20))\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_68\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_162 (Conv2D)          (None, 1, 50, 16)         80        \n",
+      "_________________________________________________________________\n",
+      "conv2d_163 (Conv2D)          (None, 1, 50, 32)         4640      \n",
+      "_________________________________________________________________\n",
+      "conv2d_164 (Conv2D)          (None, 1, 50, 64)         18496     \n",
+      "_________________________________________________________________\n",
+      "reshape_18 (Reshape)         (None, 1, 50, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "dense_68 (Dense)             (None, 1, 50, 64)         4160      \n",
+      "_________________________________________________________________\n",
+      "dense_69 (Dense)             (None, 1, 50, 20)         1300      \n",
+      "=================================================================\n",
+      "Total params: 28,676\n",
+      "Trainable params: 28,676\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = cnn_classifier(50)\n",
+    "test.summary()"
    ]
   },
   {
