--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -22,36 +22,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"./result/1_27/method1result\")\n",
+    "test = data.groupby('block').\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "block\n",
-       "1       1\n",
-       "2       1\n",
-       "3       0\n",
-       "4       0\n",
-       "5       0\n",
-       "       ..\n",
-       "996     1\n",
-       "997     0\n",
-       "998     0\n",
-       "999     0\n",
-       "1000    1\n",
-       "Name: labels, Length: 1000, dtype: int64"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_22\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_48 (Conv2D)           (None, 50, 1, 16)         80        \n",
+      "_________________________________________________________________\n",
+      "conv2d_49 (Conv2D)           (None, 50, 1, 32)         8224      \n",
+      "_________________________________________________________________\n",
+      "conv2d_50 (Conv2D)           (None, 50, 1, 16)         16400     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_3 (Average (None, 6, 1, 16)          0         \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 6, 1, 2)           34        \n",
+      "=================================================================\n",
+      "Total params: 24,738\n",
+      "Trainable params: 24,738\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
     }
    ],
    "source": [
-    "data = pd.read_csv(\"./result/1_27/method1result\")\n",
-    "test = data.groupby('block').mean().labels\n",
-    "test"
+    "test = make_generator(50)\n",
+    "test.summary()"
    ]
   },
   {
